# matrix_tool_crewai

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  documentation.md  requirements.txt  run.ps1  run.sh  test.py
examples/ex1/: README.md  pyproject.toml
examples/ex1/src/ex1/: crew.py  main.py
examples/ex1/src/ex1/config/: agents.yaml  tasks.yaml
examples/ex1/src/ex1/tools/matrix_tool/: __init__.py  matrix_tool.py
examples/moderator/: pyproject.toml
examples/moderator/src/moderator/: __init__.py  crew.py  main.py
examples/moderator/src/moderator/config/: agents.yaml  tasks.yaml
examples/moderator/src/moderator/tools/: __init__.py
examples/moderator/src/moderator/tools/matrix_tool/: __init__.py  matrix_tool.py
src/: api.rs  config.rs  error.rs  lib.rs  main.rs
src/tests/: api_tests.rs  integration_tests.rs  main_test.rs  mock_matrix.rs  mock_matrix_sdk.rs  mod.rs
tests/: api_tests.rs  moderation_tests.rs
