[package]
name = "matrix-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0" # All associated files are under this AGPL-3.0 License.
build = "build.rs"

[dependencies]
actix-web = "4.4"
matrix-sdk = { version = "0.7", features = ["sso-login", "bundled-sqlite"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
derive_more = "0.99.17"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4"] }
toml = "0.8"
log4rs = {version = "1.3.0", optional=true}
anyhow = {version = "1.0.86", optional=true}
log = { version = "0.4.21", optional = true }
thiserror = "1.0"
sha1_smol = "1.0.0"
async-trait = "0.1.74"
url = "2.5.0"

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["matrix-sdk/bundled-sqlite"]
